test: keep tag repository tests Java 17 compatible